# Janmitra

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  LiveKit.md  README.md  docker-compose.yml  env.example  janmitra_bot.py  livekit-keys.yaml  opencode.jsonc  package-lock.json  package.json  pyproject.toml  web_client.html
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
backend/src/: agent.ts
components/: HeroCircle.tsx  VoiceCall.tsx
frontend/: .dockerignore  Dockerfile  package-lock.json
server/: README.md
