[project]
name = "janmitra"
version = "0.1.0"
description = "Janmitra voice assistant for rural Indians"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[google,local-smart-turn-v3,runner,silero,webrtc]==0.0.99",
    "pipecatcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]